--- a/styles/styles.css
+++ b/styles/styles.css
@@ -371,7 +371,8 @@ section {
   flex-direction: row;
   gap: 2.5rem;
   justify-content: space-around;
-  margin-top: 15px;
+  margin: 20px 0 0 15px;
+  padding-bottom: 5px;
 }
 
 article {
